data/derived/comb/progs/unify/prog4311.ml.out
Characters 28-42:
  let fixpoint (f,b) = wwhile((f::(f b = b)), b);;
                              ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'b * bool
